projects/gated-communities/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gated-communities
  labels:
    name: gated-communities
    environment: production
