projects/gated-communities/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gated-communities
  labels:
    app: gated-communities
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: gated-communities
